added arrow button to about page

--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@
 
             <li class="organization-item">
               <figure>
-                <a href="https://nastech.in/" title="Click to view Upliance.ai website" target="_blank">
+                <a href="https://upliance.ai" title="Click to view Upliance.ai website" target="_blank">
                   <img src="./assets/images/upliance.png">
                 </a>
                 <figcaption class="caption-white">Upliance.ai</figcaption>
@@ -558,9 +558,12 @@
             </li>
 
 
-
           </ul>
 
+        </section>
+
+        <section class="download-section">
+          <button id="showResumeLink" class="arrow-button"></button>
         </section>
 
       </article>
